--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,78 @@
 version: '3.8'
 
+#
+#
+#services:
+#  kak_bank:
+#    container_name: 'spring-boot-app'
+#    depends_on:
+#      - elasticsearch
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+##    restart: always
+#    environment:
+#      - ELASTICSEARCH_URL=http://elasticsearch:9200
+#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+#      - ELASTICSEARCH_USERNAME=elastic
+#    ports:
+#      - '8888:8080'
+#    volumes:
+#      - '/myproject:/home/ite/media'
+#    networks:
+#      - elastic
+#
+#
+#  kibana:
+#    image: docker.elastic.co/kibana/kibana:7.16.2
+#    container_name: kibana
+#    depends_on:
+#      - elasticsearch
+#    environment:
+#      - ELASTICSEARCH_URL=http://elasticsearch:9200
+#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+#      - ELASTICSEARCH_USERNAME=elastic
+##      - ELASTICSEARCH_PASSWORD=changeme
+#      - xpack.monitoring.ui.container.elasticsearch.enabled=true
+#    ports:
+#      - "5601:5601"
+#    networks:
+#      - elastic
+#
+#  elasticsearch:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+#    container_name: elasticsearch
+#    environment:
+#      - discovery.type=single-node
+#    ports:
+#      - "9200:9200"
+#    volumes:
+#      - esdata:/usr/share/elasticsearch/data
+#    networks:
+#      - elastic
+#
+#
+#  pgsync-python:
+#    build: ./pgsync-python
+#    container_name: pgsync-python
+#    depends_on:
+#
+#      - elasticsearch
+#
+#    volumes:
+#      - ./pgsync-python:/app
+#    networks:
+#      - elastic
+#
+#volumes:
+#  esdata:
+#networks:
+#  elastic:
+#    driver: bridge
+
+
+
+
 services:
   kak_bank:
     container_name: 'spring-boot-app'
@@ -8,18 +81,16 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-#    restart: always
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_URL=http://152.42.163.114:9200
+      - ELASTICSEARCH_HOSTS=http://152.42.163.114:9200
       - ELASTICSEARCH_USERNAME=elastic
     ports:
-      - '8080:8080'
+      - '8888:8080'
     volumes:
-      - '/D:/Spring/sprind-data-jpa/myproject:/home/ite/media'
+      - '/myproject:/home/ite/media'
     networks:
       - elastic
-
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.16.2
@@ -27,10 +98,9 @@ services:
     depends_on:
       - elasticsearch
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_URL=http://152.42.163.114:9200
+      - ELASTICSEARCH_HOSTS=http://152.42.163.114:9200
       - ELASTICSEARCH_USERNAME=elastic
-#      - ELASTICSEARCH_PASSWORD=changeme
       - xpack.monitoring.ui.container.elasticsearch.enabled=true
     ports:
       - "5601:5601"
@@ -49,14 +119,11 @@ services:
     networks:
       - elastic
 
-
   pgsync-python:
     build: ./pgsync-python
     container_name: pgsync-python
     depends_on:
-
       - elasticsearch
-
     volumes:
       - ./pgsync-python:/app
     networks:
@@ -64,6 +131,7 @@ services:
 
 volumes:
   esdata:
+
 networks:
   elastic:
     driver: bridge
