--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,10 +87,10 @@ services:
       - ELASTICSEARCH_USERNAME=elastic
     ports:
       - '8888:8080'
-    volumes:
-      - '/myproject:/home/ite/media'
-    networks:
-      - elastic
+#    volumes:
+#      - '/myproject:/home/ite/media'
+#    networks:
+#      - elastic
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.16.2
@@ -104,8 +104,8 @@ services:
       - xpack.monitoring.ui.container.elasticsearch.enabled=true
     ports:
       - "5601:5601"
-    networks:
-      - elastic
+#    networks:
+#      - elastic
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
@@ -114,24 +114,24 @@ services:
       - discovery.type=single-node
     ports:
       - "9200:9200"
-    volumes:
-      - esdata:/usr/share/elasticsearch/data
-    networks:
-      - elastic
+#    volumes:
+#      - esdata:/usr/share/elasticsearch/data
+#    networks:
+#      - elastic
 
   pgsync-python:
     build: ./pgsync-python
     container_name: pgsync-python
     depends_on:
       - elasticsearch
-    volumes:
-      - ./pgsync-python:/app
-    networks:
-      - elastic
+#    volumes:
+#      - ./pgsync-python:/app
+#    networks:
+#      - elastic
 
-volumes:
-  esdata:
+#volumes:
+#  esdata:
 
-networks:
-  elastic:
-    driver: bridge
+#networks:
+#  elastic:
+#    driver: bridge
