--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,52 +87,52 @@ services:
       - ELASTICSEARCH_USERNAME=elastic
     ports:
       - '8888:8080'
-#    volumes:
-#      - '/myproject:/home/ite/media'
-#    networks:
-#      - elastic
+    volumes:
+      - '/myproject:/home/ite/media'
+    networks:
+      - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.16.2
+    image: docker.elastic.co/kibana/kibana:7.8.0
     container_name: kibana
     depends_on:
       - elasticsearch
     environment:
-      - ELASTICSEARCH_URL=http://152.42.163.114:9200
-      - ELASTICSEARCH_HOSTS=http://152.42.163.114:9200
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=elastic
       - xpack.monitoring.ui.container.elasticsearch.enabled=true
     ports:
       - "5601:5601"
-#    networks:
-#      - elastic
+    networks:
+      - elastic
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
     ports:
       - "9200:9200"
 
-#    volumes:
-#      - esdata:/usr/share/elasticsearch/data
-#    networks:
-#      - elastic
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    networks:
+      - elastic
 
   pgsync-python:
     build: ./pgsync-python
     container_name: pgsync-python
     depends_on:
       - elasticsearch
-#    volumes:
-#      - ./pgsync-python:/app
-#    networks:
-#      - elastic
+    volumes:
+      - ./pgsync-python:/app
+    networks:
+      - elastic
 
-#volumes:
-#  esdata:
+volumes:
+  esdata:
 
-#networks:
-#  elastic:
-#    driver: bridge
+networks:
+  elastic:
+    driver: bridge
